      bandwidth accounting information in the state file since
      0.1.2.5-alpha.  This may result in bandwidth accounting errors
      if you try to upgrade from 0.1.1.x or earlier, or if you try to
      downgrade to 0.1.1.x or earlier.
    - New convenience code to locate a file within the DataDirectory.
    - Move non-authority functionality out of dirvote.c.

  o Utilities
    - Include the "tor-ctrl.sh" bash script by Stefan Behte to provide
      Unix users an easy way to script their Tor process (e.g. by
      adjusting bandwidth based on the time of the day).


Changes in version 0.2.0.8-alpha - 2007-10-12
  This eighth development snapshot fixes a crash bug that's been bothering
  us since February 2007, lets bridge authorities store a list of bridge
  descriptors they've seen, gets v3 directory voting closer to working,
  starts caching v3 directory consensus documents on directory mirrors,
  and fixes a variety of smaller issues including some minor memory leaks.

  o Major features (router descriptor cache):
    - Store routers in a file called cached-descriptors instead of in
      cached-routers. Initialize cached-descriptors from cached-routers
      if the old format is around. The new format allows us to store
      annotations along with descriptors.
    - Use annotations to record the time we received each descriptor, its
      source, and its purpose.
    - Disable the SETROUTERPURPOSE controller command: it is now
      obsolete.
    - Controllers should now specify cache=no or cache=yes when using
      the +POSTDESCRIPTOR command.
    - Bridge authorities now write bridge descriptors to disk, meaning
      we can export them to other programs and begin distributing them
      to blocked users.

  o Major features (directory authorities):
    - When a v3 authority is missing votes or signatures, it now tries
      to fetch them.
    - Directory authorities track weighted fractional uptime as well as