@@ -131,6 +131,8 @@ Changes in version 0.2.0.9-alpha - 2007-10-24
       downgrade to 0.1.1.x or earlier.
     - New convenience code to locate a file within the DataDirectory.
     - Move non-authority functionality out of dirvote.c.
+    - Refactor the arguments for router_pick_{directory_|trusteddir}server
+      so that they take all take the same named flags.
 
   o Utilities
     - Include the "tor-ctrl.sh" bash script by Stefan Behte to provide
